feat: :sparkles: Add character sheet edit mode, allow players to change attacks default attribute and favorite skill

--- a/lang/en.json
+++ b/lang/en.json
@@ -13,6 +13,8 @@
   "SDM.AbilityThoAbbr": "tho",
   "SDM.AbilityFull": "Full {ability}",
   "SDM.AbilityCurrent": "Current {ability}",
+  "SDM.AbilityBase": "Base",
+  "SDM.AbilityBonus": "Bonus",
   "SDM.AttackMelee": "Melee",
   "SDM.AttackRanged": "Ranged",
   "SDM.AttackOldtech": "Oldtech",
@@ -69,8 +71,11 @@
   "SDM.ItemQuantity": "Quantity",
   "SDM.ItemSizeValue": "Size",
   "SDM.ItemSizeUnit": "Unit",
+  "SDM.ItemToggleReadied": "Toggle Readied Status",
   "SDM.ItemArmor": "Armor",
   "SDM.ItemArmorType": "Type",
+  "SDM.ItemReadied": "Readied",
+  "SDM.ItemNotReadied": "Not readied",
   "SDM.ArmorTypeShield": "shield",
   "SDM.ArmorTypeLight": "light",
   "SDM.ArmorTypeMedium": "medium",
@@ -146,6 +151,7 @@
   "SDM.ButtonDelete": "Delete",
   "SDM.ButtonApply": "Apply",
   "SDM.ButtonSave": "Save Changes",
+  "SDM.BurdensPenalty": "Each burden imposes a -1 to all rolls",
   "SDM.Damage": "Damage",
   "SDM.MessageRolling": "Rolling",
   "SDM.MessageDamage": "Deals {damage} damage!",
@@ -167,6 +173,9 @@
   "SDM.ExperienceDistribution": "XP Distribution",
   "SDM.XPToGive": "XP to Give",
   "SDM.DistributeXP": "Distribute XP",
+  "SDM.DefaultAbility": "Default Ability",
+  "SDM.FavoriteSkill": "Favorite Skill",
+  "SDM.UpdateAttack": "Configure {attack} Attack Options",
   "SDM.ExperienceDistributionCompleted": "Distributed {xp} XP to {number} character(s)!",
   "SDM.SavingThrowSacrifice": "SACRIFICE",
   "SDM.SavingThrowSacrificeMessage": "Lose something precious to save.",
@@ -221,7 +230,15 @@
   "SDM.SettingsHealingHouseRule": "Healing House Rule",
   "SDM.SettingsHealingHouseRuleHint": "Roll hero dice twice and keep the highest result",
   "SDM.SettingsInvalidChange": "Invalid {settings}, reverting to default value",
-  "SDM.EFFECT.ChangeProperty": "Property",
+  "SDM.SheetEditMode": "Edit Mode",
+  "SDM.SheetPlayMode": "Play Mode",
+  "SDM.Effect.ChangeProperty": "Property",
+  "SDM.Effect.Temporary": "Temporary",
+  "SDM.Effect.Passive": "Passive",
+  "SDM.Effect.Inactive": "Inactive",
+  "SDM.Effect.Source": "Source",
+  "SDM.Effect.Toggle": "Toggle Effect",
+  "EFFECT.TabDuration": "Duration",
   "SDM.EffectsLabel.system.initiative_bonus": "Initiative bonus",
   "SDM.EffectsLabel.system.defense_bonus": "Physical defense bonus",
   "SDM.EffectsLabel.system.mental_defense_bonus": "Mental defense bonus",
@@ -244,6 +261,9 @@
   "SDM.CombatantsExcluded": "Excluded from combat: {names}",
   "DOCUMENT.New": "New {type}",
   "DOCUMENT.Create": "Create {type}",
+  "DOCUMENT.Update": "Update {type}",
+  "DOCUMENT.Delete": "Delete {type}",
+  "DOCUMENT.Transfer": "Transfer {type}",
   "TYPES.Actor.caravan": "Caravan",
   "TYPES.Actor.character": "Character",
   "TYPES.Actor.npc": "NPC",
@@ -255,6 +275,7 @@
   "TYPES.Item.spell": "Spell",
   "TYPES.Item.motor": "Motor",
   "TYPES.Item.weapon": "Weapon",
+  "TYPE.Effect": "Effect",
   "TYPE.Item": "Item",
   "TYPE.Trait": "Trait",
   "TYPE.Burden": "Burden"
