--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -13,6 +13,8 @@
   "SDM.AbilityThoAbbr": "int",
   "SDM.AbilityFull": "{ability} Total",
   "SDM.AbilityCurrent": "{ability} Atual",
+  "SDM.AbilityBase": "Base",
+  "SDM.AbilityBonus": "Bonus",
   "SDM.AttackMelee": "Corpo a Corpo",
   "SDM.AttackRanged": "À Distância",
   "SDM.AttackOldtech": "Velhatec",
@@ -69,8 +71,11 @@
   "SDM.ItemQuantity": "Quantidade",
   "SDM.ItemSizeValue": "Tamanho",
   "SDM.ItemSizeUnit": "Unidade",
+  "SDM.ItemToggleReadied": "Muda Estado Equipado",
   "SDM.ItemArmor": "Armadura",
   "SDM.ItemArmorType": "Tipo",
+  "SDM.ItemReadied": "Equipado",
+  "SDM.ItemNotReadied": "Não equipado",
   "SDM.ArmorTypeShield": "escudo",
   "SDM.ArmorTypeLight": "leve",
   "SDM.ArmorTypeMedium": "média",
@@ -143,9 +148,10 @@
   "SDM.ButtonRoll": "Rolar",
   "SDM.ButtonCreate": "Criar Novo",
   "SDM.ButtonEdit": "Editar",
-  "SDM.ButtonDelete": "Excluir",
+  "SDM.ButtonDelete": "Deletar",
   "SDM.ButtonApply": "Aplicar",
   "SDM.ButtonSave": "Salvar",
+  "SDM.BurdensPenalty": "Cada fardo penaliza todas as rolagens em -1",
   "SDM.Damage": "Dano",
   "SDM.MessageRolling": "Rolando",
   "SDM.MessageDamage": "Causa {damage} de dano!",
@@ -167,6 +173,9 @@
   "SDM.ExperienceDistribution": "Distribuição de EXP",
   "SDM.XPToGive": "EXP para Distribuir",
   "SDM.DistributeXP": "Distribuir EXP",
+  "SDM.DefaultAbility": "Atributo Padrão",
+  "SDM.FavoriteSkill": "Perícia Favorita",
+  "SDM.UpdateAttack": "Configurar Ataque {attack}",
   "SDM.ExperienceDistributionCompleted": "{xp} EXP distribuídos para {number} personagem(ns)!",
   "SDM.SavingThrowSacrifice": "SACRIFÍCIO",
   "SDM.SavingThrowSacrificeMessage": "Perca algo valioso para se salvar.",
@@ -193,7 +202,7 @@
   "SDM.ErrorNotEnoughMoney": "{target} não tem dinheiro suficiente!",
   "SDM.ErrorCashManagementFailed": "Erro durante transferência de dinheiro!",
   "SDM.ErrorUpdateDoc": "Erro ao atualizar {doc}",
-  "SDM.DeleteDocConfirmation": "Excluir {doc} permanentemente?",
+  "SDM.DeleteDocConfirmation": "Deletar {doc} permanentemente?",
   "SDM.SettingsInitiativeFormula": "Rolagem de Iniciativa",
   "SDM.SettingsInitiativeFormulaHint": "Fórmula padrão para personagens",
   "SDM.SettingsNPCInitiativeFormula": "Rolagem de Iniciativa para NPCs",
@@ -221,7 +230,15 @@
   "SDM.SettingsHealingHouseRule": "Regra de Cura",
   "SDM.SettingsHealingHouseRuleHint": "Role dados heróicos duas vezes e mantenha o maior",
   "SDM.SettingsInvalidChange": "{settings} inválido(a), revertendo para padrão",
-  "SDM.EFFECT.ChangeProperty": "Propriedade",
+  "SDM.SheetEditMode": "Modo de Edição",
+  "SDM.SheetPlayMode": "Modo de Jogo",
+  "SDM.Effect.ChangeProperty": "Propriedade",
+  "SDM.Effect.Temporary": "Temporário",
+  "SDM.Effect.Passive": "Passivo",
+  "SDM.Effect.Inactive": "Inativo",
+  "SDM.Effect.Source": "Origem",
+  "SDM.Effect.Toggle": "Ativar/Desativar Efeito",
+  "EFFECT.TabDuration": "Duração",
   "SDM.EffectsLabel.system.initiative_bonus": "Bônus de iniciativa",
   "SDM.EffectsLabel.system.defense_bonus": "Bônus de defesa física",
   "SDM.EffectsLabel.system.mental_defense_bonus": "Bônus de defesa mental",
@@ -244,17 +261,21 @@
   "SDM.CombatantsExcluded": "Excluídos do combate: {names}",
   "DOCUMENT.New": "Novo {type}",
   "DOCUMENT.Create": "Criar {type}",
+  "DOCUMENT.Update": "Editar {type}",
+  "DOCUMENT.Delete": "Deletar {type}",
+  "DOCUMENT.Transfer": "Transferir {type}",
   "TYPES.Actor.caravan": "Caravana",
   "TYPES.Actor.character": "Personagem",
   "TYPES.Actor.npc": "NPC",
   "TYPES.Item.armor": "Armadura",
   "TYPES.Item.burden": "Fardo",
   "TYPES.Item.trait": "Traço",
-  "TYPES.Item.gear": "Equipamento",
+  "TYPES.Item.gear": "Item",
   "TYPES.Item.mount": "Montaria",
   "TYPES.Item.spell": "Feitiço",
   "TYPES.Item.motor": "Motor",
   "TYPES.Item.weapon": "Arma",
+  "TYPE.Effect": "Efeito",
   "TYPE.Item": "Item",
   "TYPE.Trait": "Traço",
   "TYPE.Burden": "Fardo"
