refactor: :recycle: Refactor all character sheet rolls (expect saving throws) to use a new SDMRoll class

--- a/lang/en.json
+++ b/lang/en.json
@@ -31,7 +31,6 @@
   "SDM.InventoryTraits": "Traits",
   "SDM.InventoryBurdens": "Burdens",
   "SDM.TabEffects": "Effects",
-  "SDM.FieldAbility": "Ability",
   "SDM.FieldAbilitiesPl": "Abilities",
   "SDM.FieldArmor": "Armor",
   "SDM.FieldBiography": "Biography",
@@ -116,8 +115,9 @@
   "SDM.RollModifiers": "Modifiers",
   "SDM.RollExplosion": "Explosion",
   "SDM.RollDiceTotal": "Dice Total",
-  "SDM.RollType": "Roll Type",
+  "SDM.RollMode": "Roll Type",
   "SDM.RollUseHeroDice": "Use Hero Dice",
+  "SDM.OriginalRoll": "Original roll",
   "SDM.SavingThrowRoll": "{ability} Saving Throw",
   "SDM.HeroDiceSpend": "{actor} spent {quantity} {diceLabel}",
   "SDM.HeroDie": "hero die",
@@ -140,7 +140,9 @@
   "SDM.HealingHouseRuleHint": "",
   "SDM.AbilityScoreGen": "Roll Ability Scores",
   "SDM.Amount": "Amount",
+  "SDM.Ability": "Ability",
   "SDM.Attack": "Attack",
+  "SDM.Damage": "Damage",
   "SDM.Skill": "Skill",
   "SDM.ButtonYes": "Yes",
   "SDM.ButtonNo": "No",
@@ -152,7 +154,6 @@
   "SDM.ButtonApply": "Apply",
   "SDM.ButtonSave": "Save Changes",
   "SDM.BurdensPenalty": "Each burden imposes a -1 to all rolls",
-  "SDM.Damage": "Damage",
   "SDM.MessageRolling": "Rolling",
   "SDM.MessageDamage": "Deals {damage} damage!",
   "SDM.MessageCritical": "Critical hit!",
@@ -203,10 +204,6 @@
   "SDM.ErrorCashManagementFailed": "An error has happened during cash transfer!",
   "SDM.ErrorUpdateDoc": "Error updating {doc}",
   "SDM.DeleteDocConfirmation": "Delete {doc} permanently?",
-  "SDM.SettingsInitiativeFormula": "Initiative Formula",
-  "SDM.SettingsInitiativeFormulaHint": "Default initiative formula for characters",
-  "SDM.SettingsNPCInitiativeFormula": "NPC Initiative Formula",
-  "SDM.SettingsNPCInitiativeFormulaHint": "Default initiative formula for NPCs",
   "SDM.SettingsCurrencyName": "Currency name",
   "SDM.SettingsCurrencyNameHint": "The primary currency used in the game world",
   "SDM.SettingsEscalatorDie": "Escalator Die",
@@ -225,6 +222,12 @@
   "SDM.SettingsBaseBurdenSlotsHint": "Base number of burden slots for a character",
   "SDM.SettingsBaseNPCMorabel": "NPC Base Morale",
   "SDM.SettingsBaseNPCMorabelHint": "Base number for NPCs morale value",
+  "SDM.SettingsDefaultHeroDiceType": "Default Hero Dice",
+  "SDM.SettingsDefaultHeroDiceTypeHint": "Changes the default hero dice type for all characters",
+  "SDM.SettingsInitiativeFormula": "Initiative Formula",
+  "SDM.SettingsInitiativeFormulaHint": "Default initiative formula for characters",
+  "SDM.SettingsNPCInitiativeFormula": "NPC Initiative Formula",
+  "SDM.SettingsNPCInitiativeFormulaHint": "Default initiative formula for NPCs",
   "SDM.SettingsSavingThrowBaseRollFormula": "Base saving throw roll formula",
   "SDM.SettingsSavingThrowBaseRollFormulaHint": "Base roll formula for all saving throw rolls",
   "SDM.SettingsHealingHouseRule": "Healing House Rule",
@@ -259,6 +262,7 @@
   "SDM.EffectsLabel.system.oldtech.bonus": "",
   "SDM.ExplodingDice": "Exploding Dice",
   "SDM.CombatantsExcluded": "Excluded from combat: {names}",
+  "COMBAT.RollsInitiative": "{name} rolls for initiative!",
   "DOCUMENT.New": "New {type}",
   "DOCUMENT.Create": "Create {type}",
   "DOCUMENT.Update": "Update {type}",
