--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -31,7 +31,6 @@
   "SDM.InventoryTraits": "Traços",
   "SDM.InventoryBurdens": "Fardos",
   "SDM.TabEffects": "Efeitos",
-  "SDM.FieldAbility": "Atributo",
   "SDM.FieldAbilitiesPl": "Atributos",
   "SDM.FieldArmor": "Armadura",
   "SDM.FieldBiography": "Biografia",
@@ -116,8 +115,9 @@
   "SDM.RollModifiers": "Modificadores",
   "SDM.RollExplosion": "Explosão",
   "SDM.RollDiceTotal": "Total de Dados",
-  "SDM.RollType": "Tipo de Rolagem",
+  "SDM.RollMode": "Tipo de Rolagem",
   "SDM.RollUseHeroDice": "Usar Dados Heróicos",
+  "SDM.OriginalRoll": "Rolagem original",
   "SDM.SavingThrowRoll": "Salvaguarda de {ability}",
   "SDM.HeroDiceSpend": "{actor} gastou {quantity} {diceLabel}",
   "SDM.HeroDie": "dado heróico",
@@ -140,6 +140,7 @@
   "SDM.HealingHouseRuleHint": "",
   "SDM.AbilityScoreGen": "Rolar Atributos",
   "SDM.Amount": "Quantidade",
+  "SDM.Ability": "Atributo",
   "SDM.Attack": "Ataque",
   "SDM.Skill": "Perícia",
   "SDM.ButtonYes": "Sim",
@@ -203,10 +204,6 @@
   "SDM.ErrorCashManagementFailed": "Erro durante transferência de dinheiro!",
   "SDM.ErrorUpdateDoc": "Erro ao atualizar {doc}",
   "SDM.DeleteDocConfirmation": "Deletar {doc} permanentemente?",
-  "SDM.SettingsInitiativeFormula": "Rolagem de Iniciativa",
-  "SDM.SettingsInitiativeFormulaHint": "Fórmula padrão para personagens",
-  "SDM.SettingsNPCInitiativeFormula": "Rolagem de Iniciativa para NPCs",
-  "SDM.SettingsNPCInitiativeFormulaHint": "Rolagem padrão de initiativa para NPCs",
   "SDM.SettingsCurrencyName": "Nome da Moeda",
   "SDM.SettingsCurrencyNameHint": "Moeda primária do mundo",
   "SDM.SettingsEscalatorDie": "Dado de Intensidade",
@@ -225,6 +222,12 @@
   "SDM.SettingsBaseBurdenSlotsHint": "Número base de espaços para fardos",
   "SDM.SettingsBaseNPCMorabel": "Moral Base de NPCs",
   "SDM.SettingsBaseNPCMorabelHint": "Valor base para moral de NPCs",
+  "SDM.SettingsDefaultHeroDiceType": "Dado Heróico padrão",
+  "SDM.SettingsDefaultHeroDiceTypeHint": "Muda o tipo padrão de dado heróico para todos personagens jogadores",
+  "SDM.SettingsInitiativeFormula": "Rolagem de Iniciativa",
+  "SDM.SettingsInitiativeFormulaHint": "Fórmula padrão para personagens",
+  "SDM.SettingsNPCInitiativeFormula": "Rolagem de Iniciativa para NPCs",
+  "SDM.SettingsNPCInitiativeFormulaHint": "Rolagem padrão de initiativa para NPCs",
   "SDM.SettingsSavingThrowBaseRollFormula": "Fórmula base para resistências",
   "SDM.SettingsSavingThrowBaseRollFormulaHint": "Fórmula padrão para rolagens de resistência",
   "SDM.SettingsHealingHouseRule": "Regra de Cura",
@@ -259,6 +262,7 @@
   "SDM.EffectsLabel.system.oldtech.bonus": "",
   "SDM.ExplodingDice": "Dados Explosivos",
   "SDM.CombatantsExcluded": "Excluídos do combate: {names}",
+  "COMBAT.RollsInitiative": "{name} rolou sua iniciativa!",
   "DOCUMENT.New": "Novo {type}",
   "DOCUMENT.Create": "Criar {type}",
   "DOCUMENT.Update": "Editar {type}",
