feat: :sparkles: Validate item slots on create, update, drop and transfer of items.

--- a/lang/en.json
+++ b/lang/en.json
@@ -71,6 +71,8 @@
   "SDM.ItemSizeValue": "Size",
   "SDM.ItemSizeUnit": "Unit",
   "SDM.ItemToggleReadied": "Toggle Readied Status",
+  "SDM.ItemTraitType": "Trait Type",
+  "SDM.ItemGearType": "Gear Type",
   "SDM.ItemArmor": "Armor",
   "SDM.ItemArmorType": "Type",
   "SDM.ItemReadied": "Readied",
@@ -178,6 +180,8 @@
   "SDM.FavoriteSkill": "Favorite Skill",
   "SDM.UpdateAttack": "Configure {attack} Attack Options",
   "SDM.ExperienceDistributionCompleted": "Distributed {xp} XP to {number} character(s)!",
+  "SDM.PowerCost": "Power Cost",
+  "SDM.PowerCostHint": "Life cost for each power level",
   "SDM.SavingThrowSacrifice": "SACRIFICE",
   "SDM.SavingThrowSacrificeMessage": "Lose something precious to save.",
   "SDM.SavingThrowSave": "SAVE",
@@ -241,6 +245,11 @@
   "SDM.Effect.Inactive": "Inactive",
   "SDM.Effect.Source": "Source",
   "SDM.Effect.Toggle": "Toggle Effect",
+  "SDM.TraitSkillMod": "Skill Modifier",
+  "SDM.SkillSkilled": "Skilled",
+  "SDM.SkillExpert": "Expert",
+  "SDM.SkillMaster": "Master",
+  "SDM.WeaponDamage": "Weapon Damage",
   "EFFECT.TabDuration": "Duration",
   "SDM.EffectsLabel.system.initiative_bonus": "Initiative bonus",
   "SDM.EffectsLabel.system.defense_bonus": "Physical defense bonus",
@@ -276,9 +285,11 @@
   "TYPES.Item.trait": "Trait",
   "TYPES.Item.gear": "Item",
   "TYPES.Item.mount": "Mount",
-  "TYPES.Item.spell": "Spell",
+  "TYPES.Item.power": "Power",
   "TYPES.Item.motor": "Motor",
   "TYPES.Item.weapon": "Weapon",
+  "TYPES.Item.skill": "Skill",
+  "TYPES.Item.power_container": "Power Container",
   "TYPE.Effect": "Effect",
   "TYPE.Item": "Item",
   "TYPE.Trait": "Trait",
