--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -71,6 +71,8 @@
   "SDM.ItemSizeValue": "Tamanho",
   "SDM.ItemSizeUnit": "Unidade",
   "SDM.ItemToggleReadied": "Muda Estado Equipado",
+  "SDM.ItemGearType": "Tipo de Item",
+  "SDM.ItemTraitType": "Tipo de Traço",
   "SDM.ItemArmor": "Armadura",
   "SDM.ItemArmorType": "Tipo",
   "SDM.ItemReadied": "Equipado",
@@ -178,6 +180,8 @@
   "SDM.FavoriteSkill": "Perícia Favorita",
   "SDM.UpdateAttack": "Configurar Ataque {attack}",
   "SDM.ExperienceDistributionCompleted": "{xp} EXP distribuídos para {number} personagem(ns)!",
+  "SDM.PowerCost": "Custo de Poderes",
+  "SDM.PowerCostHint": "Custo em vida para cada nível de um poder",
   "SDM.SavingThrowSacrifice": "SACRIFÍCIO",
   "SDM.SavingThrowSacrificeMessage": "Perca algo valioso para se salvar.",
   "SDM.SavingThrowSave": "SE SALVOU",
@@ -242,6 +246,11 @@
   "SDM.Effect.Source": "Origem",
   "SDM.Effect.Toggle": "Ativar/Desativar Efeito",
   "EFFECT.TabDuration": "Duração",
+  "SDM.TraitSkillMod": "Modificador de Perícia",
+  "SDM.SkillSkilled": "Treinado",
+  "SDM.SkillExpert": "Especialista",
+  "SDM.SkillMaster": "Mestre",
+  "SDM.WeaponDamage": "Dano da Arma",
   "SDM.EffectsLabel.system.initiative_bonus": "Bônus de iniciativa",
   "SDM.EffectsLabel.system.defense_bonus": "Bônus de defesa física",
   "SDM.EffectsLabel.system.mental_defense_bonus": "Bônus de defesa mental",
@@ -276,9 +285,11 @@
   "TYPES.Item.trait": "Traço",
   "TYPES.Item.gear": "Item",
   "TYPES.Item.mount": "Montaria",
-  "TYPES.Item.spell": "Feitiço",
+  "TYPES.Item.power": "Poder",
   "TYPES.Item.motor": "Motor",
   "TYPES.Item.weapon": "Arma",
+  "TYPES.Item.skill": "Perícia",
+  "TYPES.Item.power_container": "Container de Poderes",
   "TYPE.Effect": "Efeito",
   "TYPE.Item": "Item",
   "TYPE.Trait": "Traço",
