fix: :bug: Fix some missing i18n messages

--- a/lang/en.json
+++ b/lang/en.json
@@ -72,7 +72,7 @@
   "SDM.ItemSizeUnit": "Unit",
   "SDM.ItemToggleReadied": "Toggle Readied Status",
   "SDM.ItemTraitType": "Trait Type",
-  "SDM.ItemGearType": "Gear Type",
+  "SDM.ItemGearType": "Item Type",
   "SDM.ItemArmor": "Armor",
   "SDM.ItemArmorType": "Type",
   "SDM.ItemReadied": "Readied",
@@ -203,6 +203,7 @@
   "SDM.ErrorTransferTargetHasItem": "Target actor already has this item",
   "SDM.ErrorTransferAmountNotPositive": "Amount must be a positive number",
   "SDM.ErrorTransferExcessCashAmount": "Cannot transfer more cash than available",
+  "SDM.ErrorWeightLimit": "This would exceed {target}'s carry weight limit",
   "SDM.ErrorNoMoney": "{target} doesn't have any money!",
   "SDM.ErrorNotEnoughMoney": "{target} doesn't have enough money!",
   "SDM.ErrorCashManagementFailed": "An error has happened during cash transfer!",
