feat: :art: Start formatting gear sheets

--- a/lang/en.json
+++ b/lang/en.json
@@ -77,6 +77,8 @@
   "SDM.ItemArmorType": "Type",
   "SDM.ItemReadied": "Readied",
   "SDM.ItemNotReadied": "Not readied",
+  "SDM.ArmorType": "Type",
+  "SDM.ArmorValue": "Armor",
   "SDM.ArmorTypeShield": "shield",
   "SDM.ArmorTypeLight": "light",
   "SDM.ArmorTypeMedium": "medium",
@@ -182,6 +184,12 @@
   "SDM.ExperienceDistributionCompleted": "Distributed {xp} XP to {number} character(s)!",
   "SDM.PowerCost": "Power Cost",
   "SDM.PowerCostHint": "Life cost for each power level",
+  "SDM.PowerLevel": "Level",
+  "SDM.PowerRange": "Range",
+  "SDM.PowerTarget": "Target",
+  "SDM.PowerDuration": "Duration",
+  "SDM.PowerOvercharge": "Overcharge",
+  "SDM.PowerRollFormula": "Roll Formula",
   "SDM.SavingThrowSacrifice": "SACRIFICE",
   "SDM.SavingThrowSacrificeMessage": "Lose something precious to save.",
   "SDM.SavingThrowSave": "SAVE",
@@ -250,7 +258,7 @@
   "SDM.SkillSkilled": "Skilled",
   "SDM.SkillExpert": "Expert",
   "SDM.SkillMaster": "Master",
-  "SDM.WeaponDamage": "Weapon Damage",
+  "SDM.WeaponDamage": "Damage",
   "EFFECT.TabDuration": "Duration",
   "SDM.EffectsLabel.system.initiative_bonus": "Initiative bonus",
   "SDM.EffectsLabel.system.defense_bonus": "Physical defense bonus",
