--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -77,6 +77,8 @@
   "SDM.ItemArmorType": "Tipo",
   "SDM.ItemReadied": "Equipado",
   "SDM.ItemNotReadied": "Não equipado",
+  "SDM.ArmorType": "Tipo",
+  "SDM.ArmorValue": "Armadura",
   "SDM.ArmorTypeShield": "escudo",
   "SDM.ArmorTypeLight": "leve",
   "SDM.ArmorTypeMedium": "média",
@@ -182,6 +184,12 @@
   "SDM.ExperienceDistributionCompleted": "{xp} EXP distribuídos para {number} personagem(ns)!",
   "SDM.PowerCost": "Custo de Poderes",
   "SDM.PowerCostHint": "Custo em vida para cada nível de um poder",
+  "SDM.PowerLevel": "Nível",
+  "SDM.PowerRange": "Alcançe",
+  "SDM.PowerTarget": "Alvo",
+  "SDM.PowerDuration": "Duração",
+  "SDM.PowerOvercharge": "Sobrecarga",
+  "SDM.PowerRollFormula": "Fórmula de rolagem",
   "SDM.SavingThrowSacrifice": "SACRIFÍCIO",
   "SDM.SavingThrowSacrificeMessage": "Perca algo valioso para se salvar.",
   "SDM.SavingThrowSave": "SE SALVOU",
@@ -251,7 +259,7 @@
   "SDM.SkillSkilled": "Treinado",
   "SDM.SkillExpert": "Especialista",
   "SDM.SkillMaster": "Mestre",
-  "SDM.WeaponDamage": "Dano da Arma",
+  "SDM.WeaponDamage": "Dano",
   "SDM.EffectsLabel.system.initiative_bonus": "Bônus de iniciativa",
   "SDM.EffectsLabel.system.defense_bonus": "Bônus de defesa física",
   "SDM.EffectsLabel.system.mental_defense_bonus": "Bônus de defesa mental",
