feat: :recycle: Reuse gear and trait hbs partials in burdens list

--- a/lang/en.json
+++ b/lang/en.json
@@ -148,6 +148,7 @@
   "SDM.Attack": "Attack",
   "SDM.Damage": "Damage",
   "SDM.Skill": "Skill",
+  "SDM.Power": "Power",
   "SDM.ButtonYes": "Yes",
   "SDM.ButtonNo": "No",
   "SDM.ButtonCancel": "Cancel",
@@ -179,9 +180,11 @@
   "SDM.XPToGive": "XP to Give",
   "SDM.DistributeXP": "Distribute XP",
   "SDM.DefaultAbility": "Default Ability",
+  "SDM.AbilityModifier": "Ability Modifier",
   "SDM.FavoriteSkill": "Favorite Skill",
   "SDM.UpdateAttack": "Configure {attack} Attack Options",
   "SDM.ExperienceDistributionCompleted": "Distributed {xp} XP to {number} character(s)!",
+  "SDM.Cost": "Cost",
   "SDM.PowerCost": "Power Cost",
   "SDM.PowerCostHint": "Life cost for each power level",
   "SDM.PowerLevel": "Level",
@@ -258,7 +261,10 @@
   "SDM.SkillSkilled": "Skilled",
   "SDM.SkillExpert": "Expert",
   "SDM.SkillMaster": "Master",
+  "SDM.WeaponRange": "Range",
   "SDM.WeaponDamage": "Damage",
+  "SDM.WeaponVersatile": "Versatile",
+  "SDM.WeaponVersatileDamage": "Versatile Damage",
   "EFFECT.TabDuration": "Duration",
   "SDM.EffectsLabel.system.initiative_bonus": "Initiative bonus",
   "SDM.EffectsLabel.system.defense_bonus": "Physical defense bonus",
