--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -147,6 +147,7 @@
   "SDM.Ability": "Atributo",
   "SDM.Attack": "Ataque",
   "SDM.Skill": "Perícia",
+  "SDM.Power": "Poder",
   "SDM.ButtonYes": "Sim",
   "SDM.ButtonNo": "Não",
   "SDM.ButtonCancel": "Cancelar",
@@ -180,8 +181,10 @@
   "SDM.DistributeXP": "Distribuir EXP",
   "SDM.DefaultAbility": "Atributo Padrão",
   "SDM.FavoriteSkill": "Perícia Favorita",
+  "SDM.AbilityModifier": "Bônus de Atributo",
   "SDM.UpdateAttack": "Configurar Ataque {attack}",
   "SDM.ExperienceDistributionCompleted": "{xp} EXP distribuídos para {number} personagem(ns)!",
+  "SDM.Cost": "Custo",
   "SDM.PowerCost": "Custo de Poderes",
   "SDM.PowerCostHint": "Custo em vida para cada nível de um poder",
   "SDM.PowerLevel": "Nível",
@@ -259,7 +262,10 @@
   "SDM.SkillSkilled": "Treinado",
   "SDM.SkillExpert": "Especialista",
   "SDM.SkillMaster": "Mestre",
+  "SDM.WeaponRange": "Alcançe",
   "SDM.WeaponDamage": "Dano",
+  "SDM.WeaponVersatile": "Versátil",
+  "SDM.WeaponVersatileDamage": "Dano versátil",
   "SDM.EffectsLabel.system.initiative_bonus": "Bônus de iniciativa",
   "SDM.EffectsLabel.system.defense_bonus": "Bônus de defesa física",
   "SDM.EffectsLabel.system.mental_defense_bonus": "Bônus de defesa mental",
