feat: :sparkles: Refactored inventory items title, add damage roll option for versatile weapons

--- a/lang/en.json
+++ b/lang/en.json
@@ -80,9 +80,11 @@
   "SDM.ArmorType": "Type",
   "SDM.ArmorValue": "Armor",
   "SDM.ArmorTypeShield": "shield",
+  "SDM.ArmorTypeSmall": "small",
   "SDM.ArmorTypeLight": "light",
   "SDM.ArmorTypeMedium": "medium",
   "SDM.ArmorTypeHeavy": "heavy",
+  "SDM.ArmorTypeGolem": "golem",
   "SDM.ItemMountLevel": "Level",
   "SDM.ItemMountRequires": "Requires",
   "SDM.ItemMountCapacity": "Capacity",
@@ -193,6 +195,12 @@
   "SDM.PowerDuration": "Duration",
   "SDM.PowerOvercharge": "Overcharge",
   "SDM.PowerRollFormula": "Roll Formula",
+  "SDM.PowerLevelAbbr": "P",
+  "SDM.PowerRangeAbbr": "R",
+  "SDM.PowerTargetAbbr": "T",
+  "SDM.PowerDurationAbbr": "D",
+  "SDM.PowerOverchargeAbbr": "Overcharge",
+  "SDM.PowerRollFormulaAbbr": "Roll",
   "SDM.SavingThrowSacrifice": "SACRIFICE",
   "SDM.SavingThrowSacrificeMessage": "Lose something precious to save.",
   "SDM.SavingThrowSave": "SAVE",
@@ -257,7 +265,7 @@
   "SDM.Effect.Inactive": "Inactive",
   "SDM.Effect.Source": "Source",
   "SDM.Effect.Toggle": "Toggle Effect",
-  "SDM.TraitSkillMod": "Skill Modifier",
+  "SDM.SkillMod": "Skill Modifier",
   "SDM.SkillSkilled": "Skilled",
   "SDM.SkillExpert": "Expert",
   "SDM.SkillMaster": "Master",
