--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -80,9 +80,11 @@
   "SDM.ArmorType": "Tipo",
   "SDM.ArmorValue": "Armadura",
   "SDM.ArmorTypeShield": "escudo",
+  "SDM.ArmorTypeSmall": "pequena",
   "SDM.ArmorTypeLight": "leve",
   "SDM.ArmorTypeMedium": "média",
   "SDM.ArmorTypeHeavy": "pesada",
+  "SDM.ArmorTypeGolem": "golem",
   "SDM.ItemMountLevel": "Nível",
   "SDM.ItemMountRequires": "Requer",
   "SDM.ItemMountCapacity": "Capacidade",
@@ -193,6 +195,12 @@
   "SDM.PowerDuration": "Duração",
   "SDM.PowerOvercharge": "Sobrecarga",
   "SDM.PowerRollFormula": "Fórmula de rolagem",
+  "SDM.PowerLevelAbbr": "N",
+  "SDM.PowerRangeAbbr": "Alc",
+  "SDM.PowerTargetAbbr": "A",
+  "SDM.PowerDurationAbbr": "D",
+  "SDM.PowerOverchargeAbbr": "Sobrecarga",
+  "SDM.PowerRollFormulaAbbr": "Rolagem",
   "SDM.SavingThrowSacrifice": "SACRIFÍCIO",
   "SDM.SavingThrowSacrificeMessage": "Perca algo valioso para se salvar.",
   "SDM.SavingThrowSave": "SE SALVOU",
@@ -258,7 +266,7 @@
   "SDM.Effect.Source": "Origem",
   "SDM.Effect.Toggle": "Ativar/Desativar Efeito",
   "EFFECT.TabDuration": "Duração",
-  "SDM.TraitSkillMod": "Modificador de Perícia",
+  "SDM.SkillMod": "Modificador de Perícia",
   "SDM.SkillSkilled": "Treinado",
   "SDM.SkillExpert": "Especialista",
   "SDM.SkillMaster": "Mestre",
