refactor: :art: Improve code formatting by adding prettier configuration

--- a/lang/en.json
+++ b/lang/en.json
@@ -61,6 +61,8 @@
   "SDM.FieldWealth": "Wealth",
   "SDM.FieldDebt": "Debt",
   "SDM.SkillExpertise": "Expertise",
+  "SDM.SkillCustomModifier": "Custom Modifier",
+  "SDM.SkillModifierStep": "Modifier Step",
   "SDM.NpcCr": "CR",
   "SDM.NpcXp": "XP",
   "SDM.ItemTabAttributes": "Attributes",
@@ -85,6 +87,15 @@
   "SDM.ArmorTypeMedium": "medium",
   "SDM.ArmorTypeHeavy": "heavy",
   "SDM.ArmorTypeGolem": "golem",
+  "SDM.ItemWard": "Ward",
+  "SDM.WardType": "Type",
+  "SDM.WardValue": "Ward",
+  "SDM.WardTypeTrinket": "Trinket",
+  "SDM.WardTypeWearable": "Wearable",
+  "SDM.WardTypePortable": "Portable",
+  "SDM.WardTypeBulky": "Bulky",
+  "SDM.Initiative": "Initiative",
+  "SDM.CustomInitiative": "Custom Initiative",
   "SDM.ItemMountLevel": "Level",
   "SDM.ItemMountRequires": "Requires",
   "SDM.ItemMountCapacity": "Capacity",
@@ -149,6 +160,8 @@
   "SDM.Ability": "Ability",
   "SDM.Attack": "Attack",
   "SDM.Damage": "Damage",
+  "SDM.OneHanded": "One-Handed",
+  "SDM.TwoHanded": "Two-Handed",
   "SDM.Skill": "Skill",
   "SDM.Power": "Power",
   "SDM.ButtonYes": "Yes",
@@ -165,12 +178,15 @@
   "SDM.MessageDamage": "Deals {damage} damage!",
   "SDM.MessageCritical": "Critical hit!",
   "SDM.MessageNoChanges": "No changes were needed",
+  "SDM.Morale": "Morale",
+  "SDM.MoraleRoll": "Morale Roll",
   "SDM.Transfer": "Transfer {type}",
   "SDM.TransferTo": "To",
   "SDM.Target": "Target",
   "SDM.TransferCashComplete": "Transferred {amount} cash to {target}",
   "SDM.TransferItemComplete": "{item} transferred to {target}",
   "SDM.TransferFailed": "Transfer failed: {error}",
+  "SDM.RollType": "{type} Roll",
   "SDM.RollTitle": "{prefix}Roll: {title}",
   "SDM.SelectCharacter": "Select Character",
   "SDM.AllCharacters": "All Characters",
@@ -187,6 +203,12 @@
   "SDM.UpdateAttack": "Configure {attack} Attack Options",
   "SDM.ExperienceDistributionCompleted": "Distributed {xp} XP to {number} character(s)!",
   "SDM.Cost": "Cost",
+  "SDM.MoraleEqualOutcome": "Equal Morale",
+  "SDM.MoraleOverOutcome": "Over Morale",
+  "SDM.MoraleUnderOutcome": "Under Morale",
+  "SDM.MoraleEqualOutcomeMessage": "The NPC redoubles their effort, hoping a last push brings victory. They gain a bonus on their next action.",
+  "SDM.MoraleOverOutcomeMessage": "The NPC breaks: flees, retreats, surrenders or ends combat in some other way. The better trained, the steadier the withdrawal.",
+  "SDM.MoraleUnderOutcomeMessage": "The NPC continues to struggle, grimly determined, resolute for now.",
   "SDM.PowerCost": "Power Cost",
   "SDM.PowerCostHint": "Life cost for each power level",
   "SDM.PowerLevel": "Level",
@@ -311,6 +333,7 @@
   "TYPES.Item.power": "Power",
   "TYPES.Item.motor": "Motor",
   "TYPES.Item.weapon": "Weapon",
+  "TYPES.Item.ward": "Ward",
   "TYPES.Item.skill": "Skill",
   "TYPES.Item.power_container": "Power Container",
   "TYPE.Effect": "Effect",
