--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -85,6 +85,12 @@
   "SDM.ArmorTypeMedium": "média",
   "SDM.ArmorTypeHeavy": "pesada",
   "SDM.ArmorTypeGolem": "golem",
+  "SDM.WardType": "",
+  "SDM.WardValue": "",
+  "SDM.WardTypeTrinket": "",
+  "SDM.WardTypeWearable": "",
+  "SDM.WardTypePortable": "",
+  "SDM.WardTypeBulky": "",
   "SDM.ItemMountLevel": "Nível",
   "SDM.ItemMountRequires": "Requer",
   "SDM.ItemMountCapacity": "Capacidade",
@@ -161,6 +167,8 @@
   "SDM.ButtonSave": "Salvar",
   "SDM.BurdensPenalty": "Cada fardo penaliza todas as rolagens em -1",
   "SDM.Damage": "Dano",
+  "SDM.OneHanded": "Uma mão",
+  "SDM.TwoHanded": "Duas mãos",
   "SDM.MessageRolling": "Rolando",
   "SDM.MessageDamage": "Causa {damage} de dano!",
   "SDM.MessageCritical": "Acerto crítico!",
@@ -171,7 +179,8 @@
   "SDM.TransferCashComplete": "Transferidos {amount} em dinheiro para {target}",
   "SDM.TransferItemComplete": "{item} transferido para {target}",
   "SDM.TransferFailed": "Falha na transferência: {error}",
-  "SDM.RollTitle": "{prefix}Rolagem: {title}",
+  "SDM.RollType": "Rolagem de {type}",
+  "SDM.RollTitle": "Rolagem de {prefix}: {title}",
   "SDM.SelectCharacter": "Selecionar Personagem",
   "SDM.AllCharacters": "Todos os Personagens",
   "SDM.CashManagement": "Gestão de Dinheiro",
