feat: :recycle: Refactor hero dice component

--- a/lang/en.json
+++ b/lang/en.json
@@ -250,6 +250,24 @@
   "SDM.ErrorCashManagementFailed": "An error has happened during cash transfer!",
   "SDM.ErrorUpdateDoc": "Error updating {doc}",
   "SDM.DeleteDocConfirmation": "Delete {doc} permanently?",
+  "SDM.Reaction": "Reaction",
+  "SDM.ReactionRoll": "Reaction Roll",
+  "SDM.ReactionCheck": "Oracle of Behavior",
+  "SDM.ReactionProvokeConflict": "Provoke Conflict",
+  "SDM.ReactionOutcome1": "Cosmic Corruption",
+  "SDM.ReactionOutcome2": "Aggressive Hostility",
+  "SDM.ReactionOutcome3to5": "Hatred",
+  "SDM.ReactionOutcome6to8": "Distrust",
+  "SDM.ReactionOutcome9to11": "Sympathy",
+  "SDM.ReactionOutcome12": "Timely Help",
+  "SDM.ReactionOutcome13plus": "Insistent Help",
+  "SDM.ReactionMessage1": "They come at you, like raving agents of cosmic corruption.",
+  "SDM.ReactionMessage2": "Aggressive, hostile. They attack, given half an excuse.",
+  "SDM.ReactionMessage3to5": "Thanks, they hate you.",
+  "SDM.ReactionMessage6to8": "Unsure, waffling, complicated, suspicious.",
+  "SDM.ReactionMessage9to11": "Polite, understanding, sympathetic.",
+  "SDM.ReactionMessage12": "Friendly, interested. They'll help, given half a chance.",
+  "SDM.ReactionMessage13plus": "They insist on helping, even if you don't need help. Rude to say no, but they will waste your... Oh, dear. Cup of tea?",
   "SDM.SettingsCurrencyName": "Currency name",
   "SDM.SettingsCurrencyNameHint": "The primary currency used in the game world",
   "SDM.SettingsEscalatorDie": "Escalator Die",
