--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -61,6 +61,8 @@
   "SDM.FieldWealth": "Riqueza",
   "SDM.FieldDebt": "Débito",
   "SDM.SkillExpertise": "Especialização",
+  "SDM.SkillCustomModifier": "Modificadores Customizados",
+  "SDM.SkillModifierStep": "Incremento por Nível",
   "SDM.NpcCr": "ND",
   "SDM.NpcXp": "EXP",
   "SDM.ItemTabAttributes": "Atributos",
@@ -85,12 +87,15 @@
   "SDM.ArmorTypeMedium": "média",
   "SDM.ArmorTypeHeavy": "pesada",
   "SDM.ArmorTypeGolem": "golem",
-  "SDM.WardType": "",
-  "SDM.WardValue": "",
-  "SDM.WardTypeTrinket": "",
-  "SDM.WardTypeWearable": "",
-  "SDM.WardTypePortable": "",
-  "SDM.WardTypeBulky": "",
+  "SDM.ItemWard": "Resguardo",
+  "SDM.WardType": "Tipo",
+  "SDM.WardValue": "Resguardo",
+  "SDM.WardTypeTrinket": "Bugiganga",
+  "SDM.WardTypeWearable": "Vestível",
+  "SDM.WardTypePortable": "Portátil",
+  "SDM.WardTypeBulky": "Volumoso",
+  "SDM.Initiative": "Iniciativa",
+  "SDM.CustomInitiative": "Iniciativa Customizada",
   "SDM.ItemMountLevel": "Nível",
   "SDM.ItemMountRequires": "Requer",
   "SDM.ItemMountCapacity": "Capacidade",
@@ -154,6 +159,9 @@
   "SDM.Amount": "Quantidade",
   "SDM.Ability": "Atributo",
   "SDM.Attack": "Ataque",
+  "SDM.Damage": "Dano",
+  "SDM.OneHanded": "Uma mão",
+  "SDM.TwoHanded": "Duas mãos",
   "SDM.Skill": "Perícia",
   "SDM.Power": "Poder",
   "SDM.ButtonYes": "Sim",
@@ -166,13 +174,12 @@
   "SDM.ButtonApply": "Aplicar",
   "SDM.ButtonSave": "Salvar",
   "SDM.BurdensPenalty": "Cada fardo penaliza todas as rolagens em -1",
-  "SDM.Damage": "Dano",
-  "SDM.OneHanded": "Uma mão",
-  "SDM.TwoHanded": "Duas mãos",
   "SDM.MessageRolling": "Rolando",
   "SDM.MessageDamage": "Causa {damage} de dano!",
   "SDM.MessageCritical": "Acerto crítico!",
   "SDM.MessageNoChanges": "Nenhuma alteração necessária",
+  "SDM.Morale": "Moral",
+  "SDM.MoraleRoll": "Rolagem de Moral",
   "SDM.Transfer": "Transferir {type}",
   "SDM.TransferTo": "Para",
   "SDM.Target": "Alvo",
@@ -196,6 +203,12 @@
   "SDM.UpdateAttack": "Configurar Ataque {attack}",
   "SDM.ExperienceDistributionCompleted": "{xp} EXP distribuídos para {number} personagem(ns)!",
   "SDM.Cost": "Custo",
+  "SDM.MoraleEqualOutcome": "Igual ao Moral",
+  "SDM.MoraleOverOutcome": "Acima do Moral",
+  "SDM.MoraleUnderOutcome": "Abaixo do Moral",
+  "SDM.MoraleEqualOutcomeMessage": "O NPC redobra os esforços, apostando que um último impulso trará a vitória. Recebe um bônus em sua próxima ação.",
+  "SDM.MoraleOverOutcomeMessage": "O NPC entra em colapso: foge, recua, rende-se ou encerra o combate de outra forma. Quanto melhor treinado, mais organizada será a retirada.",
+  "SDM.MoraleUnderOutcomeMessage": "O NPC continua lutando, com determinação sombria, resoluto por enquanto.",
   "SDM.PowerCost": "Custo de Poderes",
   "SDM.PowerCostHint": "Custo em vida para cada nível de um poder",
   "SDM.PowerLevel": "Nível",
@@ -237,6 +250,24 @@
   "SDM.ErrorCashManagementFailed": "Erro durante transferência de dinheiro!",
   "SDM.ErrorUpdateDoc": "Erro ao atualizar {doc}",
   "SDM.DeleteDocConfirmation": "Deletar {doc} permanentemente?",
+  "SDM.Reaction": "Reação",
+  "SDM.ReactionRoll": "Rolagem de Reação",
+  "SDM.ReactionCheck": "Oráculo do Comportamento",
+  "SDM.ReactionProvokeConflict": "Provocar Conflito",
+  "SDM.ReactionOutcome1": "Corrupção Cósmica",
+  "SDM.ReactionOutcome2": "Hostilidade Agressiva",
+  "SDM.ReactionOutcome3to5": "Ódio",
+  "SDM.ReactionOutcome6to8": "Desconfiança",
+  "SDM.ReactionOutcome9to11": "Simpatia",
+  "SDM.ReactionOutcome12": "Ajuda Oportuna",
+  "SDM.ReactionOutcome13plus": "Ajuda Insistente",
+  "SDM.ReactionMessage1": "Eles avançam como agentes enlouquecidos da corrupção cósmica.",
+  "SDM.ReactionMessage2": "Agressivos e hostis. Atacam com qualquer pretexto.",
+  "SDM.ReactionMessage3to5": "Pois é, eles te odeiam.",
+  "SDM.ReactionMessage6to8": "Hesitantes, indecisos, de trato difícil e desconfiados.",
+  "SDM.ReactionMessage9to11": "Educados, compreensivos e solidários.",
+  "SDM.ReactionMessage12": "Amigáveis e interessados. Ajudarão com qualquer abertura.",
+  "SDM.ReactionMessage13plus": "Insistem em ajudar, mesmo sem necessidade. É rude recusar, mas vão desperdiçar seu... Ah, céus. Xícara de chá?",
   "SDM.SettingsCurrencyName": "Nome da Moeda",
   "SDM.SettingsCurrencyNameHint": "Moeda primária do mundo",
   "SDM.SettingsEscalatorDie": "Dado de Intensidade",
@@ -320,6 +351,7 @@
   "TYPES.Item.power": "Poder",
   "TYPES.Item.motor": "Motor",
   "TYPES.Item.weapon": "Arma",
+  "TYPES.Item.ward": "Resguardo",
   "TYPES.Item.skill": "Perícia",
   "TYPES.Item.power_container": "Container de Poderes",
   "TYPE.Effect": "Efeito",
