feat: :lipstick: Add new fonts and system icon

--- a/lang/en.json
+++ b/lang/en.json
@@ -26,6 +26,7 @@
   "SDM.SheetItem": "SDM Item Sheet",
   "SDM.TabBiography": "Biography",
   "SDM.TabNotes": "Notes",
+  "SDM.TabPet": "Pet",
   "SDM.TabInventory": "Inventory",
   "SDM.InventoryItems": "Items",
   "SDM.InventoryTraits": "Traits",
