--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -26,6 +26,7 @@
   "SDM.SheetItem": "Ficha de Item SDM",
   "SDM.TabBiography": "Biografia",
   "SDM.TabNotes": "Anotações",
+  "SDM.TabPet": "Pet",
   "SDM.TabInventory": "Inventário",
   "SDM.InventoryItems": "Itens",
   "SDM.InventoryTraits": "Traços",
@@ -44,7 +45,7 @@
   "SDM.FieldFoes": "Inimigos",
   "SDM.FieldFatigue": "Fadiga",
   "SDM.FieldFriends": "Amigos",
-  "SDM.FieldHeroDice": "Dados Heróicos",
+  "SDM.FieldHeroDice": "Dado Heróico",
   "SDM.FieldLevel": "Nível",
   "SDM.FieldLife": "Vida Restante",
   "SDM.FieldLifeMax": "Vida",
